Bug 377899, Cycle between nsXULTooltipListener and nsGlobalWindows causes leaks, r=neil,sr=peterv